--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ datasets==2.3.2
 huggingface_hub==0.4.0
 jsonx==2020.10.0
 matplotlib==3.3.1
-numpy==1.19.1
-pandas==0.24.2
+numpy
+pandas
 seaborn==0.11.2
 torch
 transformers==4.18.0
